--- a/CsForm-OE-102-AnaProje/CsForm-OE-102-AnaProje.csproj
+++ b/CsForm-OE-102-AnaProje/CsForm-OE-102-AnaProje.csproj
@@ -149,6 +149,12 @@
     <Compile Include="Formİslemleri\UrunKDV.Designer.cs">
       <DependentUpon>UrunKDV.cs</DependentUpon>
     </Compile>
+    <Compile Include="OgrenciIsleri\frmBolumGiris.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="OgrenciIsleri\frmBolumGiris.Designer.cs">
+      <DependentUpon>frmBolumGiris.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="AnaSayfa.resx">
@@ -171,6 +177,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Formİslemleri\UrunKDV.resx">
       <DependentUpon>UrunKDV.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="OgrenciIsleri\frmBolumGiris.resx">
+      <DependentUpon>frmBolumGiris.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
