--- a/CsForm-OE-102-AnaProje/App.config
+++ b/CsForm-OE-102-AnaProje/App.config
@@ -10,6 +10,7 @@
   <connectionStrings>
     <add name="NORTHWNDEntities" connectionString="metadata=res://*/Entity.NorthwindModel.csdl|res://*/Entity.NorthwindModel.ssdl|res://*/Entity.NorthwindModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=NORTHWND;persist security info=True;user id=sa;password=1234;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
     <add name="NORTHWNDEntities1" connectionString="metadata=res://*/Entity.NortModel.csdl|res://*/Entity.NortModel.ssdl|res://*/Entity.NortModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=NORTHWND;persist security info=True;user id=sa;password=1234;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="StudentsEntities" connectionString="metadata=res://*/OgrenciIsleri.OgrEntity.StudentsModel.csdl|res://*/OgrenciIsleri.OgrEntity.StudentsModel.ssdl|res://*/OgrenciIsleri.OgrEntity.StudentsModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=Students;persist security info=True;user id=sa;password=1234;pooling=False;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
